# ReWrite2

./: .gitattributes  CHANGELOG  CMakeLists.txt  README.md
include/: data_element.hpp  lexer.hpp  parser.hpp  program.hpp  token_kind.hpp  util.hpp
phase0_interpreter/: CMakeLists.txt
phase0_interpreter/include/: data_element.hpp  parser.hpp  program.hpp  token.hpp  token_kind.hpp
phase0_interpreter/src/: data_element.cpp  lexer.cpp  main.cpp  parser.cpp  program.cpp  program_call_internal.cpp
phase1/: rewrite_compiler.rw
phase1_vm/: CMakeLists.txt
phase1_vm/include/: vm.h
phase1_vm/src/: main.cpp  vm.c
src/: data_element.cpp  lexer.cpp  main.cpp  parser.cpp  program.cpp  program_call_internal.cpp  util.cpp
tests/: factorial.rw  factorial2.rw  listn.rw  listn2.rw  nprime.rw  nqueens.rw  nqueens_bitmask.rw  string_to_int.rw
